--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,13 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+body{
+	background-color: #f8f5f6;
+}
 .main{
   overflow: hidden;
   padding-top: 40px;
+  padding-bottom: 40px;
 }
 .main, .site{
   width: 100vw;
