--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,8 @@ body{
 }
 .main{
   overflow: hidden;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  /* padding-top: 40px;
+  padding-bottom: 40px; */
 }
 .main, .site{
   width: 100vw;
