--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,11 @@ body{
   /* padding-top: 40px;
   padding-bottom: 40px; */
 }
+.main{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .main, .site{
   width: 100vw;
   height: 100vh;
